--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextra",
+  "name": "artificus",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "start": "next start",
     "build": "next build"
   },
-  "author": "Shu Ding",
+  "author": "Dev Wells",
   "license": "MIT",
   "dependencies": {
     "next": "^12.1.0",
@@ -20,8 +20,8 @@
   "devDependencies": {
     "prettier": "^2.0.5"
   },
+  "packageManager": "pnpm@7.9.5",
   "prettier": {
-    "semi": false,
     "singleQuote": true
   }
 }
