--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "artificus",
   "version": "1.0.0",
-  "description": "",
+  "description": "Artificus DnD campaign site",
   "main": "index.js",
   "scripts": {
     "dev": "next",
@@ -18,7 +18,18 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "@types/react": "18.0.20",
+    "prettier": "^2.0.5",
+    "typescript": "4.8.3",
+    "webpack": "^5.74.0"
+  },
+  "dependenciesMeta": {
+    "nextra": {
+      "injected": true
+    },
+    "nextra-theme-docs": {
+      "injected": true
+    }
   },
   "packageManager": "pnpm@7.9.5",
   "prettier": {
