--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
   "name": "artificus",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Artificus DnD campaign site",
   "main": "index.js",
   "scripts": {
     "dev": "next",
+    "ver": "changeset version",
     "start": "next start",
     "build": "next build"
   },
   "author": "Dev Wells",
   "license": "MIT",
   "dependencies": {
+    "@changesets/cli": "^2.24.4",
+    "artificus": "link:",
     "next": "^12.1.0",
     "nextra": "^1.1.0",
-    "nextra-theme-docs": "^1.2.2",
+    "nextra-theme-docs": "^1.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/react": "18.0.20",
     "prettier": "^2.0.5",
-    "typescript": "4.8.3",
-    "webpack": "^5.74.0"
-  },
-  "dependenciesMeta": {
-    "nextra": {
-      "injected": true
-    },
-    "nextra-theme-docs": {
-      "injected": true
-    }
+    "typescript": "4.8.3"
   },
   "packageManager": "pnpm@7.9.5",
   "prettier": {
