--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "@types/react": "18.0.20",
     "prettier": "^2.0.5",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "webpack": "^5.74.0"
   },
   "packageManager": "pnpm@7.9.5",
   "prettier": {
