--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.20",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "prettier": "^2.7.1",
     "rimraf": "^5.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "tailwindcss": "^3.3.1"
   },
   "packageManager": "pnpm@8.1.0"
 }
